========================
0.0.73
========================

- PREF configuration is saved nicely

========================
0.0.72
========================

- added support for WebSocket for the Total.js Proxy
- added `/templates/` directory for the templates
- updated `TEMPLATE()` functionality
	- `filename` is targeted to the `/templates/` directory
	- `~filename` is will be used as an absolute filename
	- `http:// or https://` will download template from the URL address
	- local templates are not cached in the DEBUG mode
- updated `HTMLMAIL()`, `<body` element is with the normalized CSS
- fixed using `port` in the `PROXY()` method
- fixed closing of request/response when redirecting in the `REQUEST()` method
- fixed HTML parser by adding fallback for the non-exists end tag
- fixed `debug` mode for `.html` plugins/extensions/components
- extended `Icon` schema type by adding support for Total.js Icons
- fixed applying of `controller.status` for `controller.invalid()` method
- fixed parsing data in the promise in the `TotalAPI()` method
- fixed error handling in the `QueryBuilder`
- added `COMPONENTATOR(name, components)` method for downloading of UI components
- fixed returning object instance in the `ROUTE()` method
- added `publish:Boolean/String` property into the `schema.action()`
- added `$.publish(value)` property into the `SchemaOptions`
- improved `String.toJSONSchema()`
- improved HttpFile.move between volumes
- updated svg check

========================
0.0.71
========================

- added support fro inline enums for `String.toJSONSchema()`
- added support for inline enums in Schema actions
- added `webp` image size measurement by [Marek Mráz](https://github.com/Mrazbb)
- added `promise` support for the `TotalAPI()` method
- fixed `default_cors` option
- fixed `schema.action()` for the standard REST routes
- updated Tangular version
- added `TEMPLATE(url/filename/Tangulartemplate, model, [$])` method for generating templates